# svgsubfig

./: .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
assets/: plots.m
src/svgsubfig/: __init__.py  __main__.py  utility.py
tests/: plots.json  test_svgsubfig.py
